--- a/assets/app.css
+++ b/assets/app.css
@@ -205,12 +205,14 @@ button:focus {
 }
 
 .wide-video {
-  width: 100%
+  width: 100%;
+  height: 189px;
 }
 
 @media(min-width: 992px) {
   .wide-video {
-    width: 75%
+    width: 560px;
+    height: 315px;
   }
 }
 
